examples/test/testpolicy9352.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9352
  namespace: namespace372
spec:
  podSelector:
    matchLabels:
      key0: value15
      key33: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value47
          key35: value41
          key38: value15
      podSelector:
        matchLabels:
          key26: value22
          key15: value21
          key14: value21
